--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "jest": "^27.5.1",
     "pagedone": "^1.2.2",
     "react": "^18.3.1",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
